Support Theme: Fix flow of text around a right-aligned image block.
Props bph, audrasjb.
Fixes #4870.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@9536 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-support/sass/site/_helphub.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-support/sass/site/_helphub.scss
@@ -96,7 +96,7 @@ body.helphub-with-sidebar {
 	.entry-content {
 		section {
 			.container {
-				.wp-block-image {
+				figure.wp-block-image {
 					overflow: hidden;
 				}
 
